Scanner prototype